--- a/TickTacToe/app/src/main/AndroidManifest.xml
+++ b/TickTacToe/app/src/main/AndroidManifest.xml
@@ -8,12 +8,18 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.TickTacToe">
+        android:theme="@style/Theme.TickTacToe.NoActionBar">
+        <activity
+            android:name=".OnlineGame"
+            android:exported="false" />
+        <activity
+            android:name=".VersusOnline"
+            android:exported="false" />
         <activity
             android:name=".ForgotPassword"
             android:exported="false"
             android:label="@string/title_activity_forgot_password"
-            android:theme="@style/Theme.TickTacToe.NoActionBar" />
+            android:parentActivityName=".SignIn" />
         <activity
             android:name=".CreateAccount"
             android:exported="true">
@@ -23,10 +29,24 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SignIn" />
-        <activity android:name=".VersusComputer" />
-        <activity android:name=".VersusPlayer" />
-        <activity android:name=".TheOption" />
+        <activity
+            android:name=".SignIn"
+            android:label="@string/sign_in"
+            android:parentActivityName=".CreateAccount" />
+        <activity
+            android:name=".VersusComputer"
+            android:label="@string/vs_computer" />
+        <activity
+            android:name=".VersusPlayer"
+            android:label="@string/vs_player" />
+        <activity
+            android:name=".TheOption"
+            android:label="@string/menu"
+            android:parentActivityName=".SignIn">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".SignIn" />
+        </activity>
     </application>
 
 </manifest>
